# asciidoc-pycheck

./: .pre-commit-hooks.yaml  README.adoc  pyproject.toml
.github/workflows/: check.yml
adoc_check/: ast.py  titlecase.py
