[tool.poetry]
name = "adoc_check"
version = "0.1.0"
description = ""
authors = ["alex <alex@pdp7.net>"]

[tool.poetry.dependencies]
python = ">=3.6"
appdirs = "^1.4.4"

[tool.poetry.dev-dependencies]
ipython = "*"
ipdb = "*"
flake8 = "*"
black = { version = "*", allow-prereleases = true }
flake8-black = "*"
pytest = "*"

[tool.poetry.scripts]
adoc_check_titlecase = 'adoc_check.titlecase:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
